tests/snapshots/run_wpt_conformance__coreml_reduceLogSumExp_avoids_underflows_caused_by_taking_the_log_of_small_inputs.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_log_sum_exp.https.any.js reduceLogSumExp avoids underflows caused by taking the log of small inputs, coreml
 reduce_log_sum_exp :: reduceLogSumExp avoids underflows caused by taking the log of small inputs: index 0: actual=-13.815511 expected=-100 ulp=23786411 tolerance=32
  inputs: reduceLogSumExpInput: [-100]
  expected reduceLogSumExpOutput: [-100]
  actual reduceLogSumExpOutput: [-13.815511]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceLogSumExpInput: f32[1];
  }

  nodes {
    [reduceLogSumExpOutput] = reduceLogSumExp(reduceLogSumExpInput, axes=[0], keepDimensions=false, label="");
  }

  outputs { reduceLogSumExpOutput; }
}
